# MO824A-combinatorial-optimization

./: .editorconfig  .gitignore  Atividade 1.ipynb  LICENSE.md  README.md  coordinates
KTSP/: ktsp.cpp
activity4/: bestImprovement.csv  buildCSV.py  kqbf_solutions.csv  maxQbf.cpp  maxQbf.py  maxQbf_reactive.py
activity6/: README.md
activity6/instances/qbf/: instances.ods
activity6/src/maxQbf_c++/: GA.cpp  GA.hpp  Makefile  Solution.hpp  main.cpp  maxQbf_c++  util.hpp
activity_1/: README.md  report.tex
activity_1/report/: bibliography.bib  report.tex
activity_1/src/: CompanyProblem.py  CompanyProblemSolver.py  Constants.py  ProblemSizeCounter.py  README.md  Random.py  generateFigures.py  test.py  testTimeExecution.py  timeExecution.py
activity_2/: README.md  generator.py  kstps.ipynb  kstsp.py
activity_2/KTSP/: subTourElim.cpp  subTourElim.hpp
activity_2/instancesKTSP/: N150K0.ktsp  N150K75.ktsp  N200K100.ktsp  N200K200.ktsp  N250K125.ktsp
activity_2/report/: bibliography.bib  kstsp_result.txt  report.tex
activity_2/src/: environment.yml  kstsp.py  problem_data.py  tsp.py
activity_2/tests/: t.py  t2.py
activity_2/tests/cutDefaultOnlyEulerMIPSol/: N100K100.ktsp  N100K50.ktsp  N150K0.ktsp  N150K75.ktsp  N200K0.ktsp  N200K200.ktsp  N250K0.ktsp  N250K125.ktsp
activity_2/tests/cuts0/: N100K0.ktsp  N100K50.ktsp  N150K0.ktsp  N150K150.ktsp  N200K0.ktsp  N200K100.ktsp
activity_2/tests/cuts3/: N100K100.ktsp  N100K50.ktsp  N200K100.ktsp  N250K0.ktsp  N250K250.ktsp
activity_2/tests/cuts3HeuristicsTime/: N100K100.ktsp  N200K0.ktsp  N200K100.ktsp  N200K200.ktsp
activity_2/tests/cuts3HeuristicsTimePrimalSimplex/: N100K100.ktsp  N150K0.ktsp  N150K150.ktsp  N250K0.ktsp  N250K125.ktsp
activity_3/: CMakeLists.txt
activity_3/KTSP/: Makefile
activity_3/include/: concorde.h  concordeSolver.hpp  heuristic.hpp  lagrangian.hpp  solve_z.hpp  util.hpp
activity_3/instancesKTSP/: N100K0.ktsp  N100K100.ktsp  N100K50.ktsp  N150K0.ktsp  N150K150.ktsp  N150K75.ktsp  N200K0.ktsp  N200K100.ktsp  N200K200.ktsp  N250K0.ktsp  N250K125.ktsp  N250K250.ktsp  N5K0.ktsp  generator.py
activity_3/report/: .latexmkrc  README.md  bibliography.bib  report.tex
activity_3/results/: extract_data.py
activity_3/results_old/: extract_data.py
activity_3/script/: run_all  run_concorde  run_ktsp  run_main
activity_3/src/: concordeSolver.cpp  concorde_example.cpp  concorde_solve_instance.cpp  heuristic.cpp  ktsp.cpp  lagrangian.cpp  main.cpp  solve_z.cpp  z_solver_test.cpp
activity_4/: firstImprovement.csv  maxQbf.py  runall.sh
activity_5/relatorio/: relatorio.tex
activity_6/relatorio/: bib.bib
activity_8/src/: perfprof.py  run_perprof-cost.py  run_perprof-time.py  run_tttplot.py  tttplots.pl
computational_project/theme_proposal/: .latexmkrc  bibliography.bib  theme_proposal.tex
instancesKTSP/: N100K50.ktsp  N200K0.ktsp  N250K250.ktsp
src/maxQbf_c++/: Makefile  Solution.hpp  TS.cpp  TS.hpp  main.cpp  util.hpp
tests/cutDefaultOnlyEulerMIPSol/: N200K100.ktsp
tests/cuts0/: N100K100.ktsp  N150K75.ktsp  N250K0.ktsp  N250K250.ktsp
tests/cuts3/: N150K150.ktsp  N150K75.ktsp  N200K0.ktsp
tests/cuts3HeuristicsTime/: N150K75.ktsp  N250K125.ktsp
tests/cuts3HeuristicsTimePrimalSimplex/: N200K0.ktsp  N200K100.ktsp  N250K250.ktsp
tests/cutsDefault/: N150K150.ktsp  N250K125.ktsp
tests/logs/: cuts0  cuts3  cuts3HeuristicsTime  cutsDefault
(+123 files in other folders)
